--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header ul {
 
 header li{
     display: inline-block;
-    padding: 0px 10px;
+    padding: 0px 25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
@@ -24,7 +24,7 @@ header p {
 }
 
 .heroImg{
-    background-color: #EBEBEB;
+    background-color: rgb(173, 210, 233);
     padding: 100px 15px;
 }
 
@@ -145,6 +145,11 @@ h3{
 #tabs, #tabs2{
     background-color: rgb(253, 253, 253);
     margin: 15px;
+    color: #0080ff;
+}
+
+a, #proto{
+    color: #0080ff;
 }
 
 /* for mobile screens */
